# music-organise

./: .gitignore  PKGBUILD  README.md  pyproject.toml
scripts/: install-arch-package.sh
src/music_organise/: __init__.py  cli.py  core.py  tui.py
tests/: test_cli.py  test_core.py  test_tui.py
