[project]
name = "music-organise"
version = "0.1.0"
description = "Organise MP3 and FLAC files by tags and keep XSPF playlists pointing at the copied files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47",
    "prompt-toolkit>=3.0",
]

[project.scripts]
music-organise = "music_organise.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
